--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -3,7 +3,11 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <div class="footer-copyright">
-                    This is something you should see <a href="https://google.com">more text dawg</a>.
+                  {{#get "posts" include="tags,author"}}
+                    {{#foreach posts}}
+                        {{title}}
+                    {{/foreach}}
+                  {{/get}}
                 </div>
             </div>
         </div>
