--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -4,6 +4,7 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="footer-copyright">
                   {{#get "tags" limit="all"}}{{tags}}{{/get}}
+                  <span class="test-text">This is some shit...</span>
                 </div>
             </div>
         </div>
